<resources>
    <string name="app_name">Gmail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recibidos">Recibidos</string>
    <string name="menu_enviados">Enviados</string>
    <string name="menu_no_leidos">No Leídos</string>
    <string name="enviar">Enviar</string>

    <string name="menu_others">Otras Opciones</string>
    <string name="menu_spam">Spam</string>
    <string name="menu_papelera">Papelera</string>
</resources>