<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recibidos"
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/menu_recibidos" />
        <item
            android:id="@+id/nav_enviados"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_enviados" />
        <item
            android:id="@+id/nav_noleidos"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_no_leidos" />
        <item
            android:id="@+id/nav_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/enviar" />
    </group>
    <item
        android:id="@+id/others"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="@string/menu_others">

        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <item
                android:id="@+id/nav_spam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@android:drawable/ic_dialog_alert"
                android:title="@string/menu_spam" />
            <item
                android:id="@+id/nav_papelera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@android:drawable/ic_menu_delete"
                android:title="@string/menu_papelera" />
        </menu>
    </item>
</menu>