<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_recibidos">

    <fragment
        android:id="@+id/nav_recibidos"
        android:name="com.nataliasep.gmail.fragment.FragmentListado"
        android:label="@string/menu_recibidos" />

    <fragment
        android:id="@+id/nav_enviados"
        android:name="com.nataliasep.gmail.fragment.FragmentListado"
        android:label="@string/menu_enviados" />

    <fragment
        android:id="@+id/nav_noleidos"
        android:name="com.nataliasep.gmail.fragment.FragmentListado"
        android:label="@string/menu_no_leidos" />
</navigation>